Fix missing padding at the bottom

--- a/src/stylesheets/components/transcription/_alto-document.scss
+++ b/src/stylesheets/components/transcription/_alto-document.scss
@@ -3,10 +3,13 @@
 // --------------------------------------------------
 
 .alto-document {
+  flex: 1 1 auto;
   font-family: $font-family-monospace;
   line-height: normal;
   padding-block: min(10cqh, #{$editor-padding});
   padding-inline: 10%;
+  height: fit-content;
+  min-height: 100cqh;
 
   .text-line {
     display: flex;
